tests/compilation/not_a_struct.stderr
error: Please use a struct
 --> tests/compilation/not_a_struct.rs:9:14
  |
9 |     #[derive(Equation)]
  |              ^^^^^^^^
  |
  = note: this error originates in the derive macro `Equation` (in Nightly builds, run with -Z macro-backtrace for more info)
